# lambdo

./: .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: defect.yaml  proposal.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yaml  release.yaml
agent/: Cargo.toml  build.rs
agent/lib/: Cargo.toml
agent/lib/src/: config.rs  lib.rs
agent/lib/src/api/: client.rs  comms.rs  grpc_definitions.rs  mod.rs  server.rs  service.rs
agent/lib/src/external_api/: comms.rs  mod.rs  model.rs  service.rs
agent/lib/src/internal_api/: model.rs  service.rs
agent/lib/src/runner_engine/: model.rs  service.rs
agent/src/: main.rs
api/: .env.example  Cargo.toml  build.rs
api/src/: config.rs  controller.rs  grpc_definitions.rs  lib.rs  main.rs  model.rs  net.rs  service.rs  state.rs
api/src/api/: chatgpt.rs  mod.rs  service.rs
api/src/run_code/: controller.rs  mod.rs  model.rs  service.rs
api/src/vm_manager/: mod.rs  net.rs  state.rs
api/src/vm_manager/vmm/: grpc_definitions.rs  grpc_server.rs  mod.rs  net.rs
api/src/vmm/: mod.rs  vm_handler.rs
api/static/: ai-plugin.json  openapi.yaml
examples/node/: config.yaml
examples/python/: config.yaml
initramfs/: Cargo.toml
initramfs/src/: httpclient.rs  image.rs  main.rs  registry.rs
shared/: Cargo.toml
shared/proto/: lambdo.proto
shared/src/: lib.rs
src/: config.rs  lib.rs  main.rs
