[package]
name = "lambdo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.62"
thiserror = "1.0.32"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version="4.1.6", features=["derive"] }
