[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
anyhow = "1.0.69"
serialport = { version = "4.2.0", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_yaml = "0.9"
clap = { version = "4.1.6", features = ["derive"] }
unshare = "0.7.0"
thiserror = "1.0.32"
tonic = { version = "0.10.2", features = ["transport"] }
prost = "0.12.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.8", features = ["net"] }
default-net = "0.18.0"


[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost"] }

[lib]
name = "agent_lib"
path = "lib/src/lib.rs"

[dev-dependencies]
tempfile = "3.8.1"
