[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.17"
serde_json = "1.0.96"
shared = { path = "../shared" }
thiserror = "1.0.32"
anyhow = "1.0.62"
clap = { version = "4.1.6", features = ["derive"] }
serde_yaml = "0.9"
env_logger = "0.10.0"
lumper = { git = "https://github.com/faast-rt/lumper.git", rev = "81366eb" }
network_bridge = "0.1.1"
network-interface = "1.0.0"
cidr = "0.2.1"
rand = "0.8.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9.2", features = ["transport"] }
prost = "0.11.9"


[build-dependencies]
tonic-build = { version = "0.9.2", features = ["prost"]}

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
]
