[package]
name = "initramfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.23.0", features = ["full"] }
log = { version = "0.4.17" }
thiserror = { version = "1.0.37" }
anyhow = { version = "1.0.66" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = { version = "0.10.0" }
flate2 = { version = "1.0.25" }
tar = { version = "0.4.38" }
bytes = "1.4.0"
libflate = "0.1"
cpio = "0.2.2"
openssl = { version = "0.10", features = ["vendored"] }
